<resources>
    <string name="app_name">Money Tracker</string>
    <string name="Dashboard">Dashboard</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="value">$5000.00</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="value_income">$4000.00</string>
    <string name="value_expense">$2000.00</string>
    <string name="value_expense_item">-$12.0</string>
    <string name="value_expense_detail">Item</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="income_drop">Income</string>

</resources>