<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total_balance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/recent_transaction"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="338dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/transaction"
        android:layout_width="111dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="top"
        android:text="@string/Dashboard"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/total_balance"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="109dp" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/value"
        android:textStyle="bold"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="150dp"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:layout_width="195dp"
        android:layout_height="90dp"
        app:cardElevation="8dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="228dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="31dp" />

            <TextView
                android:id="@+id/textViewValueInc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_income"
                android:textStyle="bold"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="56dp" />

            <ImageView
                android:id="@+id/imageViewGreenArrow"
                android:layout_width="34dp"
                android:layout_height="38dp"
                app:srcCompat="@drawable/baseline_keyboard_arrow_up_24"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="195dp"
        android:layout_height="90dp"
        app:cardElevation="8dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="228dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="31dp" />

            <TextView
                android:id="@+id/textViewValueExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_expense"
                android:textStyle="bold"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="56dp" />

            <ImageView
                android:id="@+id/imageViewRedArrow"
                android:layout_width="34dp"
                android:layout_height="38dp"
                app:srcCompat="@drawable/baseline_keyboard_arrow_down_24"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="8dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="379dp"
        tools:ignore="MissingConstraints"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewExpenseDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="21dp" />

            <TextView
                android:id="@+id/textViewExpenseItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_expense_item"
                android:textColor="@color/red"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="320dp"
                tools:layout_editor_absoluteY="22dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="619dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>